deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: prod


spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod

  template:
    metadata:
      labels:
        app: prod

    spec:
      nodeSelector:
        node: prod

      containers:
      - name: app
        image: nginx

        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"

        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "<h1>App Name: $APP_NAME</h1>" > /usr/share/nginx/html/index.html
            echo "<h2>Environment: $APP_ENV</h2>" >> /usr/share/nginx/html/index.html
            echo "<h3>Password: $DB_PASSWORD</h3>" >> /usr/share/nginx/html/index.html
            nginx -g 'daemon off;'

        volumeMounts:
        - name: volume
          mountPath: /usr/share/nginx/html/
      

      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: my-pvc
