service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
  namespace: prod

spec:
  type: ClusterIP
  selector:
    app: prod
  ports:
    - port: 80
      targetPort: 80
