ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: prod

spec:
  ingressClassName: nginx
  rules:
    - host: nasirk.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterip
                port:
                  number: 80
